# llm-as-a-judge-for-models

./: .dockerignore  .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MLFLOW_BEST_PRACTICES.md  Makefile  PHASE_0_COMPLETE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  Procfile  README.md  RUBRIC_LLM_IMPLEMENTATION.md  SESSION_COMPLETION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
background/api/: api_route.py
background/gemini/: iteration1.md  iteration2.md  iteration3.md  iteration4.md  summary.md
background/log/: 2026-05-14_config_setup.md  2026-05-14_handover_implementation.md  2026-05-14_session_handover.md  PHASE_9-11_COMPLETE.md  PROGRESS.md  QUICKSTART.md
background/prompts/: lethel_trifecta_test_cases.yaml
background/src/: evaluation_sample.py  pydantic_sample.py
config/: README.md  judge_llm_configs.yaml  rubric_criteria.yaml  system_defaults.yaml  target_ai_system.yaml
config/stubs/: behavior_patterns.yaml
config/test_cases/: lethal_trifecta.yaml  test_cases.yaml
docs/: DATABASE_SETUP.md  README.md
docs/archive/: MLFLOW_AS_IS_TO_BE_DESIGN.md  MLFLOW_MIGRATION_PLAN.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md
docs/design/: 00_overview.md  01_architecture.md  02_data_models.md  03_api_specification.md  04_authentication.md  05_error_handling.md  06_testing.md  07_deployment.md  08_mlflow_integration.md  09_idempotency.md  10_stub_implementation.md  11_diagrams.md  12_advanced_evaluation.md  13_management_interfaces.md  14_logging_strategy.md  15_implementation_checklist.md  16_test_design.md
docs/user/: architecture.md  changelog.md  faq.md  index.md  quickstart.md
docs/user/api/: authentication.md  evaluate.md  judge-configs.md  overview.md  prompt-versions.md  test-cases.md
docs/user/concepts/: idempotency.md  lethal-trifecta.md  rubric-evaluation.md  security.md
docs/user/developers/: contributing.md  release.md  setup.md  testing.md
docs/user/guides/: analyzing-results.md  basic-usage.md  configuration_management.md  creating-test-cases.md  installation.md  mlflow-integration.md  mlflow_autologging.md  running-evaluations.md
docs/user/operations/: deployment-full.md  deployment.md  monitoring.md  performance.md  troubleshooting.md
docs/user/stylesheets/: extra.css
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml.template  service.yaml
k8s/overlays/production/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
scripts/: README.md  demo_evaluation.py  demo_llm_rubric_evaluation.py  demo_proxy_evaluation.py  demo_rubric_evaluation.py  export_detailed_results.py  export_evaluation_results.py  run_all_test_cases.py  run_input_evaluation.py  seed_database.py  setup_database.sh  test_database_connection.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  evaluate.py  idempotency.py  proxy.py  test_cases.py
src/config/: __init__.py  loader.py
src/models/: __init__.py  base.py  evaluation.py  idempotency.py  judge_result.py  rubric.py  test_case.py
src/repositories/: __init__.py  base.py  databricks_repository.py  factory.py  memory_repository.py  supabase_repository.py
src/services/: __init__.py  evaluator.py  idempotency_checker.py  judge_llm.py  mlflow_tracker.py  mock_mlflow_tracker.py  proxy_service.py  rubric_evaluator.py  rubric_llm_evaluator.py
src/utils/: __init__.py  logger.py  rubric_loader.py  test_case_loader.py
supabase/: config.toml
supabase/migrations/: 20240514000000_initial_schema.sql  20260515000000_add_test_cases_and_prompts.sql  20260515000001_add_evaluation_type.sql  20260516000000_add_config_tables.sql
tests/: conftest.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/integration/: test_db_config_integration.py  test_input_evaluation_api.py
tests/integration/api/: test_evaluate.py
tests/integration/services/: test_idempotency_integration.py
tests/setup/: test_environment.py
tests/unit/models/: test_judge_result.py  test_test_case.py
tests/unit/repositories/: test_config_methods.py
tests/unit/services/: __init__.py  test_environment_based_storage.py  test_evaluator.py  test_idempotency_checker.py  test_judge_llm.py  test_judge_llm_input.py  test_mlflow_tracker.py  test_prompt_registry.py  test_rubric_evaluator.py
tests/unit/utils/: __init__.py  test_dataset_loading.py  test_logger.py  test_test_case_loader.py
